# robot

./: README.md
controller/: CMakeLists.txt  package.xml  setup.py
controller/controller/: controller_gui.py  path_follower.py
controller/launch/: controller_with_gui.launch.py
path_planner/: CMakeLists.txt  package.xml  setup.py
path_planner/launch/: rviz.launch.py
path_planner/path_planner/: planner.py
path_planner/rviz/: path_planner.rviz
robot_gazebo/: package.xml  setup.py
robot_gazebo/launch/: spawn_turtlebot.launch.py
turtlebot_bringup/: CMakeLists.txt  package.xml  setup.py
turtlebot_bringup/launch/: turtlebot_empty_world.launch.py  turtlebot_path_follower.launch.py
turtlebot_bringup/rviz/: path_follower_rivz_config.rviz
turtlebot_custom/: package.xml  setup.cfg  setup.py
turtlebot_custom/launch/: spawn_turtlebot_rgbd.launch.py
turtlebot_custom/urdf/: turtlebot3_waffle_rgbd.urdf.xacro
