<package format="3">
  <name>turtlebot_bringup</name>
  <version>0.0.0</version>
  <description>TurtleBot3 bringup package</description>
  <maintainer email="83573466+Vishnu-Thirtha@users.noreply.github.com">vishnu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
